--- a/src/Screens/TechLogs/TechLogs.css
+++ b/src/Screens/TechLogs/TechLogs.css
@@ -178,3 +178,9 @@ body {
     align-items: center;
     justify-content: center;
   }
+
+  .filtered-count {
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: #333;
+  }
