--- a/src/navigation/Navigation.css
+++ b/src/navigation/Navigation.css
@@ -55,4 +55,40 @@
     width: 100%;
     text-align: left;
   }
+
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-title {
+    cursor: pointer;
+    padding: 10px;
+    color: white;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+    flex-direction: column;
+  }
+  
+  .dropdown-content .navlink {
+    padding: 10px;
+    display: block;
+    color: white;
+    text-decoration: none;
+  }
+  
+  .dropdown-content .navlink:hover {
+    background-color: #555;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: flex;
+  }
 }
