Add MyLogs Page

--- a/src/Screens/LogEntry/LogEntry.css
+++ b/src/Screens/LogEntry/LogEntry.css
@@ -47,10 +47,10 @@ body {
   box-sizing: border-box;
 }
 
-.form-title {
+form-title_tec {
   font-size: 22px;
   margin-bottom: 14px;
-  color: #1a202c;
+  color: #a5b1c9;
 }
 
 .form-group {
