--- a/src/Screens/MyLogs/MyLogs.css
+++ b/src/Screens/MyLogs/MyLogs.css
@@ -41,7 +41,8 @@
   .no-logs-message {
     text-align: center;
     font-size: 16px;
-    color: #888;
+    margin-top: 75px;
+    color: #f4f3f3;
   }
   
   .logs-container {
@@ -118,10 +119,32 @@
     border-radius: 6px;
     cursor: pointer;
   }
+
+  .search-input {
+    width: 250px;
+    height: 28px;
+    padding: 6px 10px;
+    margin: 0 auto 16px auto;
+    display: block;
+    font-size: 14px;
+    border: 1px solid #bbb;
+    border-radius: 4px;
+  }
   
   .pagination-controls button:disabled {
     background-color: #a5b4fc;
     cursor: not-allowed;
+  }
+
+  .logs-header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+  }
+
+  .search-input {
+    width: 100%;
+    max-width: 75%;
   }
   
   /* Mobile Responsive Styles */
