--- a/src/navigation/Navigation.css
+++ b/src/navigation/Navigation.css
@@ -1,10 +1,10 @@
 /* src/assets/fonts.css */
-@font-face {
+/* @font-face {
   font-family: 'URW DIN Condensed';
   src: url('../../src/assets/fonts/font.css') format('woff2');
   font-weight: bold;
   font-style: normal;
-}
+} */
 
 /* Root Variables */
 :root {
